# collectra

./: COPYING  Cargo.toml  Procfile  Profile  README.md
migrations/2018-06-26-104415_create_devices/: down.sql  up.sql
migrations/2018-06-27-073007_rename-uuid/: down.sql  up.sql
migrations/2018-07-08-073859_add_num_checkins_last_checkin/: down.sql  up.sql
src/: main.rs  schema.rs
