[package]
name = "collectra"
version = "0.1.0"
authors = ["Umang Raghuvanshi <u@umangis.me>"]

[dependencies]
rocket = "0.3.14"
rocket_codegen = "0.3.14"
serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.22"
rocket_contrib = "0.3.14"
diesel = { version = "1.3.2", features = ["postgres"] }
dotenv = "0.13.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
lazy_static = "1.0.1"
